# highway-bus-mate

./: .gitignore  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.mysql.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
backend/.github/workflows/: deploy.yml
backend/alembic/: env.py
backend/alembic/seeds/: dev_seed.py
backend/alembic/versions/: 001_initial_schema.py  002_bus_mate_domain.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: exceptions.py  logging.py  security.py  settings.py  versioning.py
backend/app/db/: session.py
backend/app/middleware/: exception_handler.py  logging.py
backend/app/models/: __init__.py  admin.py  booking.py  booking_seat.py  bus.py  contribution.py  enums.py  notification.py  payment.py  pricing.py  report_snapshot.py  review.py  route.py  route_stop.py  saved_route.py  schedule.py  seat.py  ticket.py  trip.py  user.py  user_notification.py  user_session.py
backend/app/repositories/: base.py  booking_repo.py  booking_seat_repo.py  bus_repo.py  contribution_repo.py  notification_repo.py  payment_repo.py  pricing_repo.py  report_snapshot_repo.py  review_repo.py  route_repo.py  route_stop_repo.py  saved_route_repo.py  schedule_repo.py  seat_repo.py  ticket_repo.py  trip_repo.py  user_notification_repo.py  user_repo.py
backend/requirements/: base.txt  development.txt
backend/scripts/: entrypoint.sh  migrate.sh
backend/tests/: conftest.py
(+153 files in other folders)
